# pi-snake

./: Dockerfile  clear.py  main.py  pyproject.toml
drawers/: pi_draw.py
pi_snake/: board.py  direction.py  pi_snake.py
pi_snake/directionairs/: __init__.py  crash_avoider.py  directionair.py  horizontal.py  keyboard.py  random.py
pi_snake/drawers/: __init__.py  drawer.py  pi_draw.py  sysout.py
