[tool.poetry]
name = "pi-snake"
version = "0.1.0"
description = ""
authors = ["mcmhav <mcmhav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pynput = "^1.6"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
